[workspace]
members = ["image_processor", "mirror_plugin", "blur_plugin"]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = "0.25"
libloading = "0.8"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
